// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`uni_modules:uni-ext-api findUploadEncryptUniModulesFiles(app-android) 1`] = `
[
  "uni_modules/test-com1/encrypt",
  "uni_modules/test-com1/index.module.uts",
  "uni_modules/test-com1/package.json",
  "uni_modules/test-com1/components/test-com1-1/logo.png",
  "uni_modules/test-com1/components/test-com1-1/test-com1-1.vue",
  "uni_modules/test-com1/components/test-com1-2/test-com1-2.vue",
  "uni_modules/test-com2/encrypt",
  "uni_modules/test-com2/index.module.uts",
  "uni_modules/test-com2/index.uts",
  "uni_modules/test-com2/package.json",
  "uni_modules/test-com2/utils/index.uts",
  "uni_modules/test-com2/components/test-com2-1/api.png",
  "uni_modules/test-com2/components/test-com2-1/test-com2-1.vue",
  "uni_modules/test-com2/components/test-com2-2/test-com2-2.vue",
]
`;

exports[`uni_modules:uni-ext-api findUploadEncryptUniModulesFiles(app-ios) 1`] = `
[
  "uni_modules/test-com1/encrypt",
  "uni_modules/test-com1/index.module.uts",
  "uni_modules/test-com1/package.json",
  "uni_modules/test-com1/components/test-com1-1/test-com1-1.vue",
  "uni_modules/test-com1/components/test-com1-2/test-com1-2.vue",
  "uni_modules/test-com2/encrypt",
  "uni_modules/test-com2/index.module.uts",
  "uni_modules/test-com2/index.uts",
  "uni_modules/test-com2/package.json",
  "uni_modules/test-com2/utils/index.uts",
  "uni_modules/test-com2/components/test-com2-1/test-com2-1.vue",
  "uni_modules/test-com2/components/test-com2-2/test-com2-2.vue",
]
`;

exports[`uni_modules:uni-ext-api findUploadEncryptUniModulesFiles(web) 1`] = `
[
  "uni_modules/test-com1/encrypt",
  "uni_modules/test-com1/index.module.uts",
  "uni_modules/test-com1/package.json",
  "uni_modules/test-com1/components/test-com1-1/test-com1-1.vue",
  "uni_modules/test-com1/components/test-com1-2/test-com1-2.vue",
  "uni_modules/test-com2/encrypt",
  "uni_modules/test-com2/index.module.uts",
  "uni_modules/test-com2/index.uts",
  "uni_modules/test-com2/package.json",
  "uni_modules/test-com2/utils/index.uts",
  "uni_modules/test-com2/components/test-com2-1/test-com2-1.vue",
  "uni_modules/test-com2/components/test-com2-2/test-com2-2.vue",
]
`;
